test/tests/stages/9_functions/invalid_types/extra_credit/switch_on_function.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: f
                  List[0]: 
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: f
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
